Appending the countries dropdown to body to prevent it being clipped by the parent div

--- a/client/settings/phone-input/style.scss
+++ b/client/settings/phone-input/style.scss
@@ -126,7 +126,6 @@
 // override intl-tel-input styles
 .iti {
 	width: 100%;
-	margin-top: $gap-large;
 }
 
 .no-top-margin .iti {
